Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.3.0, 5.11.0
-
Fix Version/s: 5.12.0, 5.13.0 Alpha 1
-
Component/s: Quick: Mouse Touch and Tablet input
-
Labels:None
-
Platform/s:
-
Commits:9e9acff340032bd4ec5ee6fbd1b13cd51e14ca3d (qt/qtdeclarative/5.12)
Description
Problem description
If I use a mouse inside MultiPointTouchArea component, every mouse press is evaulated as gesture and gesture signal is emitted (except area aroud [0, 0] point relatively to MPTA).
This is happening, because gesture startX and startY is always 0.
import QtQuick 2.9 import QtQuick.Window 2.2 Window { visible: true id: root width: 1406; height: 536 MultiPointTouchArea { id: touchArea anchors.fill: parent onGestureStarted: { console.log(gesture.touchPoints[0].startX, gesture.touchPoints[0].startX, gesture.touchPoints[0].x, gesture.touchPoints[0].y) } } }
If I connect touch display and use touch, the startX and startY is changing as expected. (it contains the coordinates of the first touch)
Attachments
Issue Links
- resulted from
-
QTBUG-31047 MultiPointTouchArea eats mouse events, needs to ignore them
-
- Closed
-