MultiPointTouchArea: capture the mouse position on press

QTouchEvent::TouchPoint already remembers the start position from
where the touch point was pressed.  But when MPTA handles mouse
events, it populates a synthetic touchpoint (the _mouseQpaTouchPoint
variable).  So to be fully consistent, it needs to store the mouse
press position there too.

Since this was not done, gestureStarted was emitted for almost any
mouse movement (while pressed) because the stored startPos was 0,0,
so MPTA would nearly always think the drag threshold had already been
exceeded.  In a QML onGestureStarted callback
gesture.touchPoints[0].startX and startY were always zero too.

Amends fe2de633f9b9454ec8a9c2a5874ad85f49d8d54d

Fixes: QTBUG-70258

Change-Id: I5bc0abbe0cb52c1aa02d60a76c52ec26bb0683e6
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>